--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
-<h1>Hey. I'm a big heading </h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>Hey. I'm a big heading </h1>
+    <p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+    <a href="https://google.com" target="_blank" title="Let's
+    go to Google">Click me! I'm a link!</a>
+    <p>My name is:<br>
+    Catty</p>
+    <img src="https://hips.hearstapps.com/hmg-prod/images/domestic-cat-lies-in-a-basket-with-a-knitted-royalty-free-image-1592337336.jpg?crop=0.668xw:1.00xh;0.247xw,0&resize=980:*">
+</body>
+</html>
