Wrote the css for our character's website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Master Po</title>
     <link rel="icon" href="img/masterpo.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
     <!--header element-->
@@ -14,15 +16,15 @@
     <!-- main elemnt -->
     <main>
         <h2></h2>
-        <p>Master Master Po is awesome! 
+        <p>Master Po is awesome! 
         He's a panda who suddenly becomes a Dragon Master and fights to save China. </p>
         <img src="img/masterpofriends.jpg">
-        <p>Master Po and his friends</p>
+        <p class="caption">Master Po and his friends</p>
         <!-- Characteristics -->
         <h2>Master Po's characteristics</h2>
         <ol>
             <li>He's got a big smile</li>
-            <li>He's loves to eat</li>
+            <li>He loves to eat</li>
             <li>He's a Dragon Warrior</li>
         </ol>
         <!-- Friends -->
