header image fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--header element-->
     <header>
-        <img src="img/masterpo.jpg">
+        <img src="img/master_po.jpg">
         <h1>Master Po</h1>
 
     </header>
