minor name change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Footer element -->
     <footer>
         <p>This site was created during a <a href="https:/skillshare.com"> Skillshare</a> class.
-            &copy; Rich</p>
+            &copy; Chris</p>
     </footer>
 </body>
 </html>
